removing the 'enc_this' workaround from the source code. prepping v0.70 release (starting to update the help docs)
git-svn-id: file:///tmp/Eisenkraut@107 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/stylesheet.css
+++ b/trunk/help/stylesheet.css
@@ -29,6 +29,10 @@ a:hover {
 	text-decoration:underline;	
 }
 
+li.none {
+	list-style-type:none;
+}
+
 li {
 /*	list-style-type:none; */
 	list-style-image:url(list.gif);
