further help docs
git-svn-id: file:///tmp/Eisenkraut@110 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/stylesheet.css
+++ b/trunk/help/stylesheet.css
@@ -33,6 +33,16 @@ li.none {
 	list-style-type:none;
 }
 
+tt {
+	outline-width: 2pt;
+	outline-color: #808080;
+	outline-style: outset;
+	padding-left: 2pt;
+	padding-right: 2pt;
+	background: #EEEEEE;
+	font-family: Courier;
+}
+
 li {
 /*	list-style-type:none; */
 	list-style-image:url(list.gif);
